Fixed some stuff on Safari
Also changed how i'm detecting browsers to be less hacky

--- a/static/src/style/responsive.styl
+++ b/static/src/style/responsive.styl
@@ -22,9 +22,15 @@
     bottom: 192px;
   }
 
-  @-moz-document url-prefix() {
+  .firefox {
     .stats-panel {
       left: calc(50% - 120px);
+    }
+  }
+
+  .safari {
+    .stats-panel {
+      left: calc(50% - 128px);
     }
   }
 
