--- a/static/src/style/stats-panel.styl
+++ b/static/src/style/stats-panel.styl
@@ -46,8 +46,14 @@
   }
 }
 
-@-moz-document url-prefix() {
+.firefox {
   .stats-panel {
     left: 14px;
+  }
+}
+
+.safari {
+  .stats-panel {
+    left: 6px;
   }
 }
